# Agere-LNCS-2017

./: .gitmodules  README.md  build_deps.sh
benchmarks/: CMakeLists.txt  Makefile  run_benchmarks.sh
benchmarks/include/: calculate_fractal.hpp  cmd.hpp  config.hpp  kernel.hpp  util.hpp
benchmarks/src/: bench_matrix_offloading.cpp  cmd.cpp  config.cpp  copy_ops_big.cpp  copy_ops_small.cpp  cpu_matrix.cpp  list_devices.cpp  opencl_caf.cpp  opencl_native.cpp  opencl_overhead.cpp  spawn_time.cpp  spawn_time_core.cpp  util.cpp
data/: evaluation.opj
